--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,45 +3,38 @@ security:
         App\Entity\User:
             algorithm: bcrypt
 
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
-    providers:
-        in_memory: { memory: ~ }
-        in_database:
-            entity:
-                class: App\Entity\User
-                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-
+        login:
+            pattern:  ^/api/login
+            stateless: true
+            anonymous: true
+            #json_login:
+            #    check_path:               /api/login_check
+            #    success_handler:          lexik_jwt_authentication.handler.authentication_success
+            #    failure_handler:          lexik_jwt_authentication.handler.authentication_failure
         admin:
             pattern: ^/admin
             anonymous: true
-
             provider: in_database
-
             form_login:
                 login_path: admin_account_login
                 check_path: admin_account_login
-
             logout:
                 path: admin_account_logout
                 target: homepage
-
         main:
             anonymous: true
-
             provider: in_database
-
             form_login:
                 login_path: account_login
                 check_path: account_login
-            
             logout:
                 path: account_logout
                 target: account_login
-
+       
             # activate different ways to authenticate
 
             # http_basic: true
@@ -49,6 +42,15 @@ security:
 
             # form_login: true
             # https://symfony.com/doc/current/security/form_login_setup.html
+
+    
+    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    providers:
+        in_memory: { memory: ~ }
+        in_database:
+            entity:
+                class: App\Entity\User
+                property: email
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
